--- a/FTCollectorApp/View/SitesPage/DuctColorCodePopUp.xaml
+++ b/FTCollectorApp/View/SitesPage/DuctColorCodePopUp.xaml
@@ -2,17 +2,19 @@
 <pages:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-             x:Class="FTCollectorApp.View.SitesPage.ColorCodePopUp"
+             x:Class="FTCollectorApp.View.SitesPage.DuctColorCodePopUp"
                  Title="Color Code Select">
 
     <StackLayout Padding="20" HorizontalOptions="CenterAndExpand" BackgroundColor="Gray">
         <ListView SeparatorVisibility="Default" SeparatorColor="White" x:Name="listViewColorList" 
-                  ItemsSource="{Binding DuctColorCode}" ItemSelected="listViewColorList_ItemSelected" >
+                  ItemsSource="{Binding DuctColorCode}" SelectedItem ="{Binding SelectedColor, Mode=TwoWay} " 
+                  >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <StackLayout Orientation="Horizontal" BackgroundColor="{Binding ColorHex}">
-                            <Label VerticalOptions="Center" Text="{Binding ColorName}" FontSize="Medium"/>
+                        <StackLayout Orientation="Horizontal" Padding="10" >
+                            <Label HorizontalOptions="Start" Text="{Binding ColorName}" FontSize="Medium"/>
+                            <BoxView HorizontalOptions="End" BackgroundColor="{Binding ColorHex}" />
                         </StackLayout>
                     </ViewCell>
                 </DataTemplate>
