--- a/FTCollectorApp/View/TraceFiberPages/FiberOpticCablePage.xaml
+++ b/FTCollectorApp/View/TraceFiberPages/FiberOpticCablePage.xaml
@@ -8,41 +8,148 @@
         <StackLayout Padding="20">
             <Label Text="Fiber Optic Cable" FontSize="Large" HorizontalOptions="Center" WidthRequest="80" />
             <Label Text="Enter cable Id" HorizontalOptions="Start" />
-                <local:Dropdown x:Name="pCableId" HorizontalOptions="FillAndExpand" ItemDisplayBinding="{Binding CableIdDesc}"/>
+                <local:Dropdown x:Name="pCableId" HorizontalOptions="FillAndExpand" 
+                                ItemsSource="{Binding aFiberCableList}"
+                                ItemDisplayBinding="{Binding CableIdDesc}"
+                                SelectedItem="{Binding SelectedFiberCable, Mode=TwoWay}"
+                                                            Title="Select  Fiber Cable"
+                            TitleColor="Gray" />
+                <local:BorderEntry Placeholder="Enter cable id" PlaceholderColor="Gray" x:Name="nwCableName" IsVisible="false" 
+                                   Text="{Binding NewCableName, Mode=TwoWay}">
+                    <Entry.Triggers>
+
+                        <DataTrigger TargetType="Entry"
+                    Binding="{Binding Source={x:Reference pCableId},
+                                    Path=SelectedIndex  }"
+                    Value="0">
+
+                            <Setter Property="IsVisible" Value="true"/>
+                        </DataTrigger>
+                    </Entry.Triggers>
+
+                </local:BorderEntry>
+
                 <Label Text="Cable Type" HorizontalOptions="Start" />
+
             <local:Dropdown x:Name="pCableType" HorizontalOptions="FillAndExpand"
-                            ItemsSource="{Binding CableTypeList}" ItemDisplayBinding="{Binding CodeCableDesc}"/>
+                            ItemsSource="{Binding CableTypeList}" 
+                            ItemDisplayBinding="{Binding CodeCableDesc}"/>
             <Label Text="Manufacturer" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pManufacturer" HorizontalOptions="FillAndExpand"
-                            ItemsSource="{Binding ManufacturerList} " ItemDisplayBinding="{Binding ManufName}"/>
-            <Label Text="Model" HorizontalOptions="Start" />
+                            ItemsSource="{Binding ManufacturerList} " 
+                            SelectedItem="{Binding SelectedManufacturer, Mode=TwoWay}"
+                            ItemDisplayBinding="{Binding ManufName}"
+                            Title="--Select  Manufacturer--"
+                            TitleColor="Gray" />
+                <Label Text="Model" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pModel" 
-                           ItemsSource="{Binding ModelList}" ItemDisplayBinding="{Binding DevTypeDesc}"
-                            HorizontalOptions="FillAndExpand"/>
+                           ItemsSource="{Binding ModelDetailList}" 
+                            SelectedItem="{Binding SelectedModelDetail, Mode=TwoWay}"
+                            ItemDisplayBinding="{Binding ModelNumber}"
+                            HorizontalOptions="FillAndExpand"
+                            Title="--Select  Model--"
+                            TitleColor="Gray" />                            
             <Label Text="Enter Label" HorizontalOptions="Start" />
-            <local:BorderEntry x:Name="entryLabel" HorizontalOptions="FillAndExpand"/>
+            <local:BorderEntry x:Name="entryLabel" HorizontalOptions="FillAndExpand" Text="{Binding TextLabel, Mode=TwoWay}"/>
             <Label Text="Enter single-mode strand count" HorizontalOptions="Start"/>
-            <local:Dropdown x:Name="pSingleModeCount" WidthRequest="100" />
+                <local:Dropdown x:Name="pSingleModeCount" WidthRequest="100"
+                        SelectedItem="{Binding SMCount, Mode=TwoWay}" >
+                    <Picker.Items>
+                        <x:String>1</x:String>
+                        <x:String>2</x:String>
+                        <x:String>3</x:String>
+                        <x:String>4</x:String>
+                        <x:String>5</x:String>
+                        <x:String>6</x:String>
+                        <x:String>7</x:String>
+                        <x:String>8</x:String>
+                        <x:String>9</x:String>
+                        <x:String>10</x:String>
+                        <x:String>11</x:String>
+                        <x:String>12</x:String>
+                        <x:String>24</x:String>
+                        <x:String>144</x:String>
+                    </Picker.Items>
+                </local:Dropdown> 
             <Label Text="Enter multi-mode strand count" HorizontalOptions="Start"/>
-            <local:Dropdown x:Name="pMultiModeCount" WidthRequest="100" />
+                <local:Dropdown x:Name="pMultiModeCount"  WidthRequest="100"
+                        SelectedItem="{Binding MMCount, Mode=TwoWay}" >
+                    <Picker.Items>
+                        <x:String>1</x:String>
+                        <x:String>2</x:String>
+                        <x:String>3</x:String>
+                        <x:String>4</x:String>
+                        <x:String>5</x:String>
+                        <x:String>6</x:String>
+                        <x:String>7</x:String>
+                        <x:String>8</x:String>
+                        <x:String>9</x:String>
+                        <x:String>10</x:String>
+                        <x:String>11</x:String>
+                        <x:String>12</x:String>
+                        <x:String>24</x:String>
+                        <x:String>144</x:String>
+                    </Picker.Items>
+
+                </local:Dropdown>
             <Label Text="Enter buffer count" HorizontalOptions="Start"/>
-            <local:Dropdown x:Name="pBufferCount" WidthRequest="100" />
+                <local:Dropdown x:Name="pBufferCount" WidthRequest="100"
+                        SelectedItem="{Binding SelectedBufferCnt, Mode=TwoWay}" >
+                    <Picker.Items>
+                        <x:String>1</x:String>
+                        <x:String>2</x:String>
+                        <x:String>3</x:String>
+                        <x:String>4</x:String>
+                        <x:String>5</x:String>
+                        <x:String>6</x:String>
+                        <x:String>7</x:String>
+                        <x:String>8</x:String>
+                        <x:String>9</x:String>
+                        <x:String>10</x:String>
+                        <x:String>11</x:String>
+                        <x:String>12</x:String>
+                        <x:String>13</x:String>
+                        <x:String>14</x:String>
+                        <x:String>15</x:String>
+                    </Picker.Items>
+                </local:Dropdown>
             <Label Text="Multi-Mode Diameter" HorizontalOptions="Start"/>
-            <local:Dropdown x:Name="pMultimodeDia" HorizontalOptions="FillAndExpand"/>
-            
-            <Label Text="Sheath Type" HorizontalOptions="Start" />
+                <local:Dropdown x:Name="pMultimodeDia" 
+                                ItemsSource="{Binding ClrCodeList}" ItemDisplayBinding="{Binding ClrName}"
+                                BackgroundColor="{Binding SelectedColor.ClrHex}"
+                                SelectedItem="{Binding SelectedColor, Mode=TwoWay}"
+                                HorizontalOptions="FillAndExpand"
+                                Title="--Select  Color--"
+                                TitleColor="Gray"
+                                />
+
+                <Label Text="Sheath Type" HorizontalOptions="Start" />
             <local:Dropdown x:Name="pSheathTpe" HorizontalOptions="FillAndExpand"
-                            ItemsSource="{Binding SheathList}" ItemDisplayBinding="{Binding SheathType}"/>
+                            ItemsSource="{Binding SheathList}" 
+                            SelectedItem="{Binding SelectedSheath, Mode=TwoWay}"
+                            ItemDisplayBinding="{Binding SheathType}"/>
             <Label Text="Manufactured at" HorizontalOptions="Start" />
-            <DatePicker x:Name="pManufacturedAt" HorizontalOptions="FillAndExpand" DateSelected="OnDateSelected"/>
+            <DatePicker x:Name="pManufacturedAt" HorizontalOptions="FillAndExpand" 
+                        Date="{Binding SelectedManufacturedDate, Mode=TwoWay, StringFormat=Date: {0:yyyy-MM-dd}}"
+                        />
             <Label Text="Enter reel id" HorizontalOptions="Start" />
-            <local:Dropdown x:Name="pReelId" ItemsSource="{Binding ReelIdList}" ItemDisplayBinding="{Binding ReelNumber}" 
+            <local:Dropdown x:Name="pReelId" 
+                            ItemsSource="{Binding ReelIdList}" 
+                            ItemDisplayBinding="{Binding ReelNumber}" 
+                            SelectedItem="{Binding SelectedReelId, Mode=TwoWay}"
                             HorizontalOptions="FillAndExpand"/>
             <Label Text="Installed at" HorizontalOptions="Start" />
-            <DatePicker x:Name="pInstalledAt" HorizontalOptions="FillAndExpand" DateSelected="OnDateSelected"/>
+            <DatePicker x:Name="pInstalledAt" HorizontalOptions="FillAndExpand" 
+                        Date="{Binding SelectedInstalledAt, Mode=TwoWay ,StringFormat=Date: {0:yyyy-MM-dd}}"
+                       />
             <Label Text="Install Type" HorizontalOptions="Start" />
-            <local:Dropdown x:Name="pInstallType" HorizontalOptions="FillAndExpand"/>
-                <Button x:Name="btnSave"  Text="Save and Continue" HorizontalOptions="FillAndExpand" Clicked="btnSave_Clicked"/>
+            <local:Dropdown x:Name="pInstallType" HorizontalOptions="FillAndExpand"
+                             ItemsSource="{Binding InstallTypeList}" 
+                            ItemDisplayBinding="{Binding FbrInstallDesc}" 
+                            SelectedItem="{Binding SelectedInstallType, Mode=TwoWay}"                           
+                            
+                            />
+                <Button x:Name="btnSave"  Text="Save and Continue" HorizontalOptions="FillAndExpand" Command="{Binding SaveCommand}"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
